<resources>
    <string name="app_name">Human Activity Recognition</string>
    <string name="activity">Activity</string>
    <string name="probability">Probability</string>
    <string name="duration">Duration</string>
    <string name="downstairs">Downstairs</string>
    <string name="jogging">Jogging</string>
    <string name="sitting">Sitting</string>
    <string name="standing">Standing</string>
    <string name="upstairs">Upstairs</string>
    <string name="activity_1">Slow (S)</string>
    <string name="activity_2">Normal (N)</string>
    <string name="activity_3">Fast (F)</string>
    <string name="record">Record</string>
    <string name="title_activity_main_tab">HAR</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Data Collection</string>
    <string name="tab_text_2">Classification</string>
    <string name="tab_text_3">Tab 3</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_graph_view">Graph View</string>
    <string name="title_activity_graph_plot">View Classifications</string>
</resources>
